--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,7 @@
     "@prisma/client": "6.6.0",
     "@trpc/server": "^11.1.1",
     "@types/ms": "^2.1.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "ms": "^2.1.3",
     "nestjs-trpc": "^1.6.1",
     "passport-jwt": "^4.0.1",
