--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
+    "react-image": "^4.1.0",
     "react-router": "^7.5.3",
     "styled-components": "^6.1.17",
     "superjson": "^1.13.3",
