--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.802.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "bcryptjs": "^3.0.2",
     "ms": "^2.1.3",
     "nestjs-trpc": "^1.6.1",
+    "nodemailer": "^7.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -49,6 +51,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -60,6 +63,7 @@
     "prisma": "^6.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "trpc-panel": "^1.3.4",
     "trpc-ui": "^1.0.15",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
